src/test/ui/parser/keyword-static-as-identifier.stderr
error: expected identifier, found keyword `static`
  --> $DIR/keyword-static-as-identifier.rs:4:9
   |
LL |     let static = "foo";
   |         ^^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#static = "foo";
   |         ^^^^^^^^

error: aborting due to previous error

